# hadoop-fs-wrapper

./: .gitignore  CODE_OF_CONDUCT.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  setup.py
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yaml  deploy.yaml  prepare_release.yaml  release.yaml
hadoop_fs_wrapper/: _version.py
hadoop_fs_wrapper/models/: __init__.py  buffered_input_stream.py  buffered_output_stream.py  buffered_reader.py  file_status.py  fs_data_input_stream.py  fs_data_output_stream.py  glob_filter.py  hadoop_file_status.py  hadoop_fs_path.py  input_stream_reader.py  remote_iterator.py  uri.py
hadoop_fs_wrapper/wrappers/: file_system.py  hadoop_fs_wrapper.py
src/hadoop_fs_wrapper/: __init__.py  _version.py
src/hadoop_fs_wrapper/models/: __init__.py  buffered_reader.py  file_status.py  fs_data_input_stream.py  fs_data_output_stream.py  hadoop_file_status.py  uri.py
src/hadoop_fs_wrapper/wrappers/: file_system.py
test/: conftest.py  test_file_system.py  test_parse_hadoop_filestatus.py
test/data/partitionedFolder/partition=2/: data.csv
