[tool.poetry]
name = "hadoop-fs-wrapper"
version = "0.0.0"
description = "Python Wrapper for Hadoop Java API"
authors = ["ECCO Sneaks & Data <esdsupport@ecco.com>"]
maintainers = ['GZU <gzu@ecco.com>', 'JRB <ext-jrb@ecco.com>']
license = 'MIT'
readme = "README.md"
repository = 'https://github.com/SneaksAndData/hadoop-fs-wrapper'

[tool.poetry.dependencies]
python = ">=3.11, <3.13"
pyspark = "~3.5"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
pytest-cov = "^3.0"
pylint = "^3"
black = "^23"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
